--- a/lib/tesseract_studio_web/components/layouts/public_root.html.heex
+++ b/lib/tesseract_studio_web/components/layouts/public_root.html.heex
@@ -9,6 +9,7 @@
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/css/app.css"} />
     <link phx-track-static rel="stylesheet" href={~p"/assets/css/main.css"} />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/user_dropdown.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
     </script>
     <script>
